--- a/client/index.css
+++ b/client/index.css
@@ -1,11 +1,46 @@
-/* 通用 */
 *{
     margin:0;
+    padding:0;
+    overflow:hidden;
+}
+
+/* 独有样式 */
+.left-menu{
+    min-height:100vh;
+}
+
+header,footer{
+    min-height:60px;
+    width: 100%;
+    background-color: #545c64;
+    color:#fff;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.header-inner{
+    justify-content: start;
+    width: 95%;
+}
+
+.main-inner{
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(45deg,rgb(213, 223, 236), white);
+}
+
+/* 通用样式 */
+.flex-center{
+    display: flex;
+    align-items: center;
+}
+
+.between{
+    justify-content: space-between;
 }
 
 .center{
-    display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
 .horizontal{
@@ -18,53 +53,3 @@
     flex-direction: column;
 }
 
-.between{
-    justify-content: space-between;
-}
-
-/* 头部 */
-header{
-    height: 7vh;
-    min-height:60px;
-    width: 100%;
-    background-color: whitesmoke;
-    color:steelblue;
-    justify-content: center;
-    /* border-bottom: 1px solid lightgray; */
-}
-
-header section{
-    justify-content: start;
-    width: 80vw;
-}
-
-/* 底部 */
-footer{
-    height: 7vh;
-    min-height:60px;
-    width: 100%;
-    background-color: whitesmoke;
-    color:steelblue;
-    font-weight: bold;
-    justify-content: center;
-    /* border-top: 2px dashed lightgray; */
-}
-
-/* 中间 */
-main{
-    height: 86vh;
-    width: 100%;
-    background-image: linear-gradient(45deg,rgb(213, 223, 236), white);
-}
-
-.menu{
-    height: 86vh;
-}
-
-.margintb{
-    margin: 2% 0%;
-}
-
-.el-submenu .el-menu-item{
-    min-width: 50px!important;
-}
